# backend/openapi/models/models.gen.go
@@ -3,6 +3,14 @@
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
 package models
 
+// Room defines model for Room.
+type Room struct {
+	IsOpened bool     `json:"isOpened"`
+	RoomId   int      `json:"roomId"`
+	RoomName string   `json:"roomName"`
+	Users    []string `json:"users"`
+}
+
 // UserCreate defines model for UserCreate.
 type UserCreate struct {
 	// Password SHA256 hashed password
